--- a/project2/project2/index.html
+++ b/project2/project2/index.html
@@ -145,7 +145,7 @@
             </div>
         </section>
         <!--  style="display: block;" -->
-        <div class="pop_bg"  style="display:block;"></div>
+        <div class="pop_bg" id="popup_bg" ></div>
             <div class="pop_wrap" id ="popup" style="margin-left:28%;margin-top: 5%;width: 40%;"> 
                 <div class="pop_title" style="line-height: 1.8;">
                     <h1>"If I have seen further, it is by standing on the shoulders of giants"</h1>
@@ -157,7 +157,7 @@
                 <div class="pop_content pop_term">
                     <p style="line-height: 2.0;">
                         제28회 KAOMI 국제종합학술대회가 <b>"STANDING ON GIANTS"</b> 라는 대주제로 <b>2021년 3월 7일(일)부터 13일(토)</b> 까지 온라인으로 개최됩니다.<br>
-                        대한치과의사협회 보수교육점수 4점(윤리필수교육 2점 포함)이 부여되며 Frank Schwarz, Giorgio Tabanella와 국내 여러 연자들의 주옥 같은 강연을 들으실 수 있습니다.<br>
+                        대한치과의사협회 보수교육점수 4점(윤리필수교육 2점 포함)이 부여되며 Frank Schwarz, Giorgio Tabanella와<br> 국내 여러 연자들의 주옥 같은 강연을 들으실 수 있습니다.<br>
                         "EureKAOMI" 코너에서는 임상에서 자주 접하게 되는 임플란트 방사선 사진 퀴즈를 통해 다양한 경품을 받으실 수 있습니다.<br>
                         또한 여러 업체의 E-Booth도 준비되어 코로나로 인해 접하지 못한 다양한 기자재를 만나보실 수 있습니다.<br>
                         <br>
