--- a/project3/exam.html
+++ b/project3/exam.html
@@ -128,7 +128,7 @@
         <div class="pop_wrap">
             <div class="pop_content pop_exam js-pop_exam">
                 <div class="js-pop_exam_text"></div>
-                <button id="submit" data-type="0" class="btn">다음 강의로 이동</button>
+                <!-- <button id="submit" data-type="0" class="btn">다음 강의로 이동</button> -->
             </div>
         </div>
     </div>
@@ -137,7 +137,8 @@
     <script src="./static/lib/moment.min.js"></script>
     <script src="./static/js/main.js?v=201207_2"></script>
     <script src="./static/js/alertText.js?v=201130_10"></script>
-    <script src="./static/js/exam.js?v=201130_10"></script>
+    <!-- <script src="./static/js/exam.js?v=201130_10"></script> -->
+    <script src="./static/js/exam_test.js?v=201130_10"></script>
 </body>
 
 </html>
