--- a/project3/list.html
+++ b/project3/list.html
@@ -53,6 +53,9 @@
                 </div> -->
             </div>
             <div class="video_list js-load_wrap js-video_list">
+                <!-- 아래 영역은 다른 카테고리를 선택했을 경우 시간차가 발생했을 때
+                    로딩바 기능을 구현하기 위해서 
+                없어도 되는 영역이지만, 사용자들의 혼란을 막기 위해서  -->
                 <div class="load_bg" style="display:block;">
                     <div class="load_wrap">
                         <div class="lds-spinner">
