--- a/project2/project2/index.html
+++ b/project2/project2/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>PREPARATION FOR THE NEXT DECADE OF PROSTHODONTICS</title>
+    <title>제 28회 KAOMI 국제종합학술대회 - International Academic Meeting of Osseointegration</title>
     <link rel="stylesheet" href="./static/css/common.css?v=201130_10">
     <link rel="stylesheet" href="./static/css/main2.css?v=201202_1">
 </head>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <!-- </div> -->
-            <div class="float_banner" style="top: 100px;">
+            <div class="float_banner" style="top: 400px;">
                 <div class="fb-tit">Special Thanks to<br>our Sponsors</div>
                 <div class="fb-conts">
                     <ul>
@@ -146,7 +146,7 @@
         </section>
         <!--  style="display: block;" -->
         <div class="pop_bg" id="popup_bg" ></div>
-            <div class="pop_wrap" id ="popup" style="margin-left:28%;margin-top: 5%;width: 40%;"> 
+            <div class="pop_wrap" id ="popup" style="margin-left:28%;margin-top: 5%; min-width: 680px;"> 
                 <div class="pop_title" style="line-height: 1.8;">
                     <h1>"If I have seen further, it is by standing on the shoulders of giants"</h1>
                     <span class="pop_x">
@@ -184,7 +184,7 @@
                         <span id="check"><input type="checkbox" value="checkbox" name="chkbox" id="chkday"/><label for="chkday" style="font-size: larger; vertical-align:3px;">다시 보지 않기</label></span>
                     </div>
                     <div style="float: right;margin-right: 15px;margin-bottom: 10px;">
-                        <button type="button" ><span  id="close">닫기</span></button>
+                        <button type="button" class="js-main_hide_pop close">닫기</button>
                     </div>  
                 
             </div>
@@ -193,10 +193,10 @@
     <script src="./static/lib/jquery-1.12.4.min.js"></script>
     <script src="./static/lib/bxslider/jquery.bxslider.min.js"></script>
     <script src="./static/lib/moment.min.js"></script>
-    <script src="./static/js/main.js?v=201207_2"></script>
-    <script src="./static/js/main2.js?v=201207_2"></script>
-    <script src="./static/js/alertText.js?v=201130_10"></script>
-    <script src="./static/js/index.js?v=201218"></script>
+    <script src="./static/js/main.js?v=201207_3"></script>
+    <script src="./static/js/main2.js?v=201207_3"></script>
+    <script src="./static/js/alertText.js?v=201130_11"></script>
+    <script src="./static/js/index.js?v=201221"></script>
 </body>
 
 </html>
