--- a/project3/receipt.html
+++ b/project3/receipt.html
@@ -43,6 +43,7 @@
     </div>
     <script src="./static/lib/jquery-1.12.4.min.js"></script>
     <script src="./static/lib/moment.min.js"></script>
+    <script src="./static/lib/bxslider/jquery.bxslider.min.js"></script>
     <script src="./static/js/main.js?v=201207_2"></script>
     <script src="./static/js/alertText.js?v=201127_99"></script>
     <script src="./static/js/receipt.js?v=201127_100"></script>
